Fix issue with thumbs clipping.

--- a/src/assets/sass/partials/_content-table.scss
+++ b/src/assets/sass/partials/_content-table.scss
@@ -344,7 +344,7 @@
 }
 
 .thumb-img {
-  background-size:auto 105%;
+  background-size:105%;
   background-position:center 16%;
   background-repeat:no-repeat;
   background-color:#000;
